update：更新 gradle 版本

--- a/heytea-core-plugin/build.gradle
+++ b/heytea-core-plugin/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java-library'
     id 'org.jetbrains.kotlin.jvm'
+    id 'maven-publish'
 }
 
 java {
@@ -10,6 +11,27 @@ java {
 
 dependencies {
     implementation gradleApi()
+}
+
+task sourceJar(type: Jar) {
+    classifier = 'sources'
+    from sourceSets.main.java.srcDirs
+}
+
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.java
+                groupId 'android.heytea'
+                artifactId 'core-gradle-plugin'
+                version "1.0.0"
+                artifact(sourceJar) {
+                    classifier "sources"
+                }
+            }
+        }
+    }
 }
 
 
